--- a/estudos/exercicios/ex023/tabela004.html
+++ b/estudos/exercicios/ex023/tabela004.html
@@ -34,14 +34,14 @@
         </caption>
         <thead>
             <tr class="titulo">
-                <th>Grupo</th>
-                <th>Nomes</th>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupo</th>
+                <th scope="col">Nomes</th>
+                <th scope="colgroup" colspan="3">Filmes</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th rowspan="3" style="text-align: center">Mulheres</th>
+                <th scope="rowgroup" rowspan="3" style="text-align: center">Mulheres</th>
                 <td>Ana Maria Santos</td>
                 <td>Alien</td>
                 <td>Rambo</td>
@@ -60,7 +60,7 @@
                 <td>Big Hero</td>
             </tr>
             <tr>
-                <th rowspan="3" style="text-align: center">Homens</th>
+                <th scope="rowgroup" rowspan="3" style="text-align: center">Homens</th>
                 <td>Bruno Mendonça</td>
                 <td>Intocáveis</td>
                 <td>Amnésia</td>
@@ -79,6 +79,12 @@
                 <td>Toy Story</td>
             </tr>
         </tbody>
+        <tfoot>
+            <tr>
+                <th scope="row" colspan="4">Total</th>
+                <td>1000</td>
+            </tr>
+        </tfoot>
     </table>
 </body>
 </html>
