--- a/estudos/exercicios/ex024 - iframes/iframe002.html
+++ b/estudos/exercicios/ex024 - iframes/iframe002.html
@@ -10,7 +10,7 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis ullam laborum laboriosam expedita recusandae eligendi dignissimos iste tenetur optio repellat cupiditate voluptatum distinctio dolorem fugit at, cumque repudiandae ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis iste totam exercitationem quia. A, rem iure voluptatum quae voluptatibus ratione repudiandae saepe, magni autem, enim tempora perspiciatis suscipit laboriosam?</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500"></iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis ullam laborum laboriosam expedita recusandae eligendi dignissimos iste tenetur optio repellat cupiditate voluptatum distinctio dolorem fugit at, cumque repudiandae ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis iste totam exercitationem quia. A, rem iure voluptatum quae voluptatibus ratione repudiandae saepe, magni autem, enim tempora perspiciatis suscipit laboriosam?</p>
 </body>
