update ex024 iframes

--- a/estudos/exercicios/ex024 - iframes/iframe003.html
+++ b/estudos/exercicios/ex024 - iframes/iframe003.html
@@ -30,7 +30,8 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo numquam facilis illo sint id magni ducimus minima quis omnis minus saepe ad molestiae, natus, iste ipsa soluta repellat! Natus, suscipit.
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos sint debitis tenetur, ullam ab at qui sapiente nihil quidem, quos voluptatibus aliquam, fugit reprehenderit dolorem totam dignissimos ipsa eius inventore.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <!--Conteúdo estático em iframes-->
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, explicabo illo. Voluptatum quo, a illo officia et ipsam libero deserunt vitae! Deserunt dolore iure expedita voluptatum possimus similique dicta unde.</p><img src='imagens/cursoemvideo-logo.png'>">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 
