--- a/estudos/exercicios/ex024 - iframes/iframe003.html
+++ b/estudos/exercicios/ex024 - iframes/iframe003.html
@@ -38,3 +38,6 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, est. Expedita reiciendis laudantium eligendi. Officia vero, tenetur minus minima aliquam accusamus eligendi harum, itaque soluta culpa tempore, mollitia quidem magni? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui sint quae sunt eligendi nostrum ipsam, animi labore minima eveniet error incidunt officiis odio perspiciatis eius, eos voluptas, eum rem nulla?</p>
 </body>
 </html>
+
+<!--Evite inserir conteúdos muitos importantes em iframes, o GoogleBot pode ter dificuldade em indexar conteúdos em iframes
+    Outro problema encontrado na utilização de iframes, são os leitores de tela (recurso utilizado por pessoas cegas que navegam na internet), os leitores de tela não conseguem realizar a leitura de um conteúdo quando este está inserido dentro de um iframe-->
