--- a/estudos/exercicios/ex024 - iframes/iframe006.html
+++ b/estudos/exercicios/ex024 - iframes/iframe006.html
@@ -10,6 +10,12 @@
     <h1>Conteúdos dentro de iframes</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium deleniti labore explicabo dolore odit vitae aspernatur. Nemo, saepe minima, hic odit excepturi ullam laboriosam natus ex, quaerat quia vero perferendis.</p>
     <h2>Vídeos</h2>
-    
+    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/232955578?h=f465f0ecea" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
+    <h2>Mapas do Google</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8740.990890402174!2d-43.17496569622138!3d-22.90842958564992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997f58a6a00a9d%3A0x3f251d85272f76f7!2sHostnet%20Internet!5e0!3m2!1spt-BR!2sbr!4v1675364144907!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    <h2>Mapas do Waze</h2>
+    <iframe src="https://embed.waze.com/iframe?zoom=16&lat=-9.622468&lon=-35.739460&ct=livemap" width="600" height="450" allowfullscreen></iframe>
 </body>
 </html>
